# tetra

./: CMakeLists.txt  README  README.md  status.toml
data/: scores.txt
data/piece/: I_piece  J_piece  L_piece  O_piece  S_piece  T_piece  Z_piece
include/: board.h  complex.h  game.hpp  piece.h  rect.h  renderer.hpp  unique_vector.h  vector.hpp
piece/: I_piece  O_piece
src/: board_piece.cpp  main.cpp  piece.cpp  rect.cpp  renderer.cpp
src/include/: board.h  complex.h  debug.h  piece.h  piece_data.h  piece_render.h  renderer.h  unique_vector.h
src/lib/: board.cpp  board_piece.cpp  main.cpp  piece.cpp  rect.cpp  renderee.cpp  renderer.cpp
